--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,43 @@ hs_err_pid*
 replay_pid*
 
 .DS_Store
+
+target/
+api/!.mvn/wrapper/maven-wrapper.jar
+api/!**/src/main/**/target/
+api/!**/src/test/**/target/
+
+### IntelliJ IDEA ###
+api/.idea/modules.xml
+api/.idea/jarRepositories.xml
+api/.idea/compiler.xml
+api/.idea/.gitignore
+api/.idea/encodings.xml
+api/.idea/vcs.xml
+api/.idea/misc.xml
+api/.idea/libraries/
+*.iws
+*.iml
+*.ipr
+
+### Eclipse ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### VS Code ###
+.vscode/
