Remove unnecessary verbose

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -12,4 +12,11 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=
 
 # Logging for security debugging (optional, remove in production)
 logging.level.org.springframework.security=DEBUG
-logging.level.com.effisoft.nlab.appointmentapi.config=DEBUG
+logging.level.com.effisoft.nlab.appointmentapi.config=DEBUG#Logging configuration
+logging.level.root=INFO
+logging.level.com.effisoft.nlab.appointmentapi=INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.springframework.security=INFO
+
+# Log pattern with timestamp, level, thread, and message
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level [%thread] %logger{36} - %msg%n
