--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.security.oauth2.resourceserver.jwt.issuer-uri=
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=
