--- a/web/components.json
+++ b/web/components.json
@@ -5,7 +5,7 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.ts",
-    "css": "app/ui/global.css",
+    "css": "ui/global.css",
     "baseColor": "stone",
     "cssVariables": true,
     "prefix": ""
