--- a/web/package.json
+++ b/web/package.json
@@ -18,10 +18,12 @@
     "lucide-react": "^0.475.0",
     "next": "latest",
     "next-auth": "5.0.0-beta.25",
+    "next-themes": "^0.4.4",
     "postcss": "8.5.1",
     "postgres": "^3.4.5",
     "react": "latest",
     "react-dom": "latest",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
