--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/forms": "^0.5.10",
     "autoprefixer": "10.4.20",
