--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,19 +1,16 @@
 spring.application.name=appointmentapi
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=nutrition_db;encrypt=true;trustServerCertificate=true
-spring.datasource.username=your_username
-spring.datasource.password=your_password
+spring.datasource.url=jdbc:sqlserver://nlabdb.cloudsolo.net:1433;databaseName=nlab;encrypt=true;trustServerCertificate=true
+spring.datasource.username=nlabappuser
+spring.datasource.password=kIGC@F14zU6&VTV0K
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
 spring.jpa.show-sql=false
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.security.oauth2.resourceserver.jwt.issuer-uri=
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://auth.cloudsolo.net/realms/nlab-app
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://auth.cloudsolo.net/realms/nlab-app/protocol/openid-connect/certs
 
-# Logging for security debugging (optional, remove in production)
-logging.level.org.springframework.security=DEBUG
-logging.level.com.effisoft.nlab.appointmentapi.config=DEBUG#Logging configuration
+#Logging configuration
 logging.level.root=INFO
 logging.level.com.effisoft.nlab.appointmentapi=INFO
 logging.level.org.springframework.web=INFO
