--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
@@ -19,6 +20,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.475.0",
     "next": "latest",
     "next-auth": "5.0.0-beta.25",
@@ -26,6 +28,7 @@
     "postcss": "8.5.1",
     "postgres": "^3.4.5",
     "react": "latest",
+    "react-day-picker": "8.10.1",
     "react-dom": "latest",
     "react-hook-form": "^7.54.2",
     "sonner": "^2.0.1",
