--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 spring.application.name=appointmentapi
-spring.datasource.url=jdbc:sqlserver://nlabdb.cloudsolo.net:1433;databaseName=nlab;encrypt=true;trustServerCertificate=true
-spring.datasource.username=nlabappuser
-spring.datasource.password=kIGC@F14zU6&VTV0K
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/nlab?currentSchema=nlab
+spring.datasource.username=postgres
+spring.datasource.password=your_password
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.default_schema=nlab
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# Security configuration
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://auth.cloudsolo.net/realms/nlab-app
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://auth.cloudsolo.net/realms/nlab-app/protocol/openid-connect/certs
 
@@ -15,6 +19,8 @@ logging.level.root=INFO
 logging.level.com.effisoft.nlab.appointmentapi=INFO
 logging.level.org.springframework.web=INFO
 logging.level.org.springframework.security=INFO
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Log pattern with timestamp, level, thread, and message
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level [%thread] %logger{36} - %msg%n
